--- a/cert/openssl/openssl.cnf
+++ b/cert/openssl/openssl.cnf
@@ -10,30 +10,30 @@ basicConstraints = critical,CA:true
 distinguished_name	= req_distinguished_name
 [ req_distinguished_name ]
 countryName			= Country Name (2 letter code)
-countryName_default		= IL
+countryName_default		= CN
 countryName_min			= 2
 countryName_max			= 2
 
 stateOrProvinceName		= State or Province Name (full name)
-stateOrProvinceName_default	= Center
+stateOrProvinceName_default	= SiChuan
 
 localityName			= Locality Name (eg, city)
-localityName_default		= Lod
+localityName_default		= ChengDu
 
 0.organizationName		= Organization Name (eg, company)
-0.organizationName_default	= GoProxy
+0.organizationName_default	= fpapi
 
 # we can do this but it is not needed normally :-)
 #1.organizationName		= Second Organization Name (eg, company)
 #1.organizationName_default	= World Wide Web Pty Ltd
 
 organizationalUnitName		= Organizational Unit Name (eg, section)
-organizationalUnitName_default	= GoProxy
+organizationalUnitName_default	= fpapi
 
 commonName			= Common Name (e.g. server FQDN or YOUR name)
-commonName_default		= goproxy.github.io
+commonName_default		= fpapi.cn
 commonName_max			= 64
 
 emailAddress			= Email Address
-emailAddress_default		= elazarl@gmail.com
+emailAddress_default		= fpapi@gmail.com
 emailAddress_max		= 64
