--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,13 @@
 [user]
 	name = yangzhou
 	email = angenal@hotmail.com
+[color]
+	ui = true
+[http]
+	postBuffer = 524288000
+	sslVerify = false
+	lowSpeedLimit = 0
+	lowSpeedTime = 999999
 [alias]
 	co = checkout
 	br = branch
@@ -12,14 +19,9 @@
 	hist = log --graph --date-order --date=short --pretty=format:'%C(auto)%h%d %C(reset)%s %C(bold blue)%ce %C(reset)%C(green)%cr (%cd)'
 	lg1 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
 	lg2 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
-[http]
-	postBuffer = 524288000
-	sslVerify = false
-	lowSpeedLimit = 0
-	lowSpeedTime = 999999
 [credential]
 	helper = store
 	protocol = https
 	host = github.com
 	username = angenal
-	password = ******
+	password = ******(密码需进行URL编码)
