--- a/k8s/etc/sysctl.conf
+++ b/k8s/etc/sysctl.conf
@@ -14,6 +14,7 @@ kernel.core_uses_pid = 1
 kernel.kptr_restrict = 1
 kernel.sysrq = 16
 kernel.shmall = 2097152
+# kernel.shmmax 参数设置为物理内存的一半
 kernel.shmmax = 2972168
 kernel.shmmni = 4096
 kernel.sem = 250 32000 100 128
