--- a/sh/01-config-go.env
+++ b/sh/01-config-go.env
@@ -1,5 +1,7 @@
 ##进行软链结: ln -s /mnt/a/git/github.com/angenalZZZ/doc/sh/01-config-go.env $HOME/.config/go/env
 
-GOROOT=/usr/local/go
-GOPATH=/home/yangzhou/go
+##GOENV=$HOME/.config/go/env
+GOCACHE=$HOME/.cache/go-build
+GOMODCACHE=$HOME/go/pkg/mod
+GOPATH=$HOME/go
 GOPROXY=https://goproxy.io,direct
