--- a/sh/01-config-go.env
+++ b/sh/01-config-go.env
@@ -1,7 +1,16 @@
 ##进行软链结: ln -s /mnt/a/git/github.com/angenalZZZ/doc/sh/01-config-go.env $HOME/.config/go/env
 
 ##GOENV=$HOME/.config/go/env
-GOCACHE=$HOME/.cache/go-build
-GOMODCACHE=$HOME/go/pkg/mod
+
+GO111MODULE=auto
+GOROOT=/usr/local/go
+GOTOOLS=$GOROOT/pkg/tool
 GOPATH=$HOME/go
+GOCACHE=$HOME/.cache/go-build
+GOSUMDB=sum.golang.google.cn
+
+# Set the GOPROXY environment variable
 GOPROXY=https://goproxy.io,direct
+
+# Set environment variable allow bypassing the proxy for specified repos (optional)
+#GOPRIVATE=git.mycompany.com,github.com/my/private
