--- a/sh/01-config-go.env
+++ b/sh/01-config-go.env
@@ -1,10 +1,12 @@
 ##进行软链结: ln -s /mnt/a/git/github.com/angenalZZZ/doc/sh/01-config-go.env $HOME/.config/go/env
+## rm -f $HOME/.config/go/env && cp /mnt/a/git/github.com/angenalZZZ/doc/sh/01-config-go.env $HOME/.config/go/env
 
 ##GOENV=$HOME/.config/go/env
 
-GO111MODULE=auto
-GOROOT=/usr/local/go
-GOTOOLS=$GOROOT/pkg/tool
+#GO111MODULE=auto
+#GOROOT=/usr/local/go
+#GOTOOLS=$GOROOT/pkg/tool
+
 GOPATH=$HOME/go
 
 GOSUMDB=sum.golang.google.cn
